tests/snapshots/bundle_rules@rfc3627_breaking_only-BindingMode.snap
---
source: src/compute_rules.rs
info:
  bundle_name: rfc3627_breaking_only
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatInner
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
    always_inspect_bm: false
---
p0 @ e.0: T0,  p1 @ e.1: T1
--------------------------- "Constructor"
[p0, p1] @ e: [T0, T1]

p0 @ &(*e).0: &T0,  p1 @ &(*e).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ e: &[T0, T1]

p0 @ &mut (*e).0: &mut T0,  p1 @ &mut (*e).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ e: &mut [T0, T1]

[p0, p1] @ &**e: &T
------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &&mut T

[p0, p1] @ &**e: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &T

[p0, p1] @ &mut **e: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ e: &mut &mut T

p @ *e: T
---------------------------------- "Deref(EatOuter)"
&p @ e: &T, binding_mode(e) = move

p @ *e: T
------------------------------------------ "Deref(EatOuter)"
&mut p @ e: &mut T, binding_mode(e) = move

p @ &**e: &T
---------------------------------- "Deref(EatInner)"
&p @ e: &&T, binding_mode(e) = ref

p @ &mut **e: &mut T
------------------------------------------ "Deref(EatInner)"
&p @ e: &mut &T, binding_mode(e) = ref mut

p @ &**e: &T
------------------------------------------ "Deref(EatInner)"
&mut p @ e: &&mut T, binding_mode(e) = ref

p @ &mut **e: &mut T
-------------------------------------------------- "Deref(EatInner)"
&mut p @ e: &mut &mut T, binding_mode(e) = ref mut

ref x @ *e: T
------------------------------------ "RefBindingResetBindingMode"
ref x @ e: &T, binding_mode(e) = ref

ref x @ *e: T
-------------------------------------------- "RefBindingResetBindingMode"
ref x @ e: &mut T, binding_mode(e) = ref mut

ref mut x @ *e: T
---------------------------------------- "RefBindingResetBindingMode"
ref mut x @ e: &T, binding_mode(e) = ref

ref mut x @ *e: T
------------------------------------------------ "RefBindingResetBindingMode"
ref mut x @ e: &mut T, binding_mode(e) = ref mut

x @ &e: &T
------------------------------------ "BindingBorrow"
ref x @ e: T, binding_mode(e) = move

x @ &mut e: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ e: T, binding_mode(e) = move


-------- "Binding"
x @ e: T


------------------------------------ "Binding"
mut x @ e: T, binding_mode(e) = move
